--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="?attr/actionBarSize">
+    >
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorTabRed"
         android:paddingLeft="10dp"
+        android:layout_marginTop="?attr/actionBarSize"
         app:tabMode="scrollable"
         />
 
