--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_search"
         android:orderInCategory="1"
-        android:title="@string/action_settings"
+        android:title="@string/action_search"
         android:icon="@drawable/ic_search_24dp"
         app:showAsAction="ifRoom" />
 </menu>
