--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,5 +13,5 @@
     <dimen name="pause_bar_distance">5dp</dimen>
     <dimen name="margin_top_prefences">60dp</dimen>
     <dimen name="margin_top_tab_layout_list">105dp</dimen>
-
+    <dimen name="padding_cover">25dp</dimen>
 </resources>
