--- a/app/src/main/res/layout/controler_view.xml
+++ b/app/src/main/res/layout/controler_view.xml
@@ -13,7 +13,7 @@
            android:layout_height="66dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_repeat_24dp"
-           android:background="@color/windowBackground_bright"
+           android:background="?selectableItemBackground"
            />
 
         <TextView
@@ -49,7 +49,7 @@
          android:layout_height="80dp"
          android:background="@color/selectedSongBackground"
          android:layout_below="@+id/controller_artist"
-         android:layout_marginTop="10dp"
+         android:layout_marginTop="16dp"
          android:src="@drawable/ic_audiotrack_24dp"
          android:padding="@dimen/padding_cover"/>
 
@@ -57,26 +57,28 @@
          android:id="@+id/controller_prev"
          android:layout_width="56dp"
          android:layout_height="56dp"
-         android:src="@drawable/ic_skip_previous_39dp"
-         android:background="@android:color/transparent"
+         android:src="@drawable/ic_skip_previous"
+         android:background="?selectableItemBackgroundBorderless"
          android:layout_toRightOf="@+id/controller_cover"
          android:layout_below="@+id/controller_artist"
-         android:layout_marginTop="23dp"
-         android:layout_marginLeft="30dp"/>
+         android:layout_marginTop="28dp"
+         android:layout_marginLeft="30dp"
+         android:paddingTop="3dp"/>
 
      <ImageButton
          android:id="@+id/controller_next"
          android:layout_width="56dp"
          android:layout_height="56dp"
-         android:src="@drawable/ic_skip_next_39dp"
-         android:background="@android:color/transparent"
+         android:src="@drawable/ic_skip_next"
+         android:background="?selectableItemBackgroundBorderless"
          android:layout_toRightOf="@+id/controller_prev"
          android:layout_below="@+id/controller_artist"
-         android:layout_marginTop="23dp"
-         android:layout_marginLeft="30dp"/>
+         android:layout_marginTop="28dp"
+         android:layout_marginLeft="30dp"
+         android:paddingTop="3dp"/>
 
      <Button
-         android:layout_marginTop="7dp"
+         android:layout_marginTop="13dp"
          android:layout_marginRight="9dp"
          android:id="@+id/controller_setting"
          android:layout_below="@+id/controller_button"
